--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.4.1
 Django==3.2.9
+django-common-helpers==0.9.2
+django-cron==0.5.1
+django-crontab==0.7.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 mysqlclient==2.1.0
